# plantmonitoring_be

./: .gitignore  README.md  backend.Dockerfile  celery_worker.Dockerfile  db.Dockerfile  docker-compose.yml  pyproject.toml  schema.sql
plantmon/: plantmon.ino
plantmonitoring_be/: manage.py
plantmonitoring_be/config/: docker.py  mysql.cnf
plantmonitoring_be/plantmon/: __init__.py  admin.py  apps.py  auth.py  celery.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
plantmonitoring_be/plantmon/management/commands/: consumer.py  wait_for_db.py
plantmonitoring_be/plantmon/migrations/: 0001_initial.py  0002_alter_device_owner.py  0003_alter_customuser_is_active.py  0004_devicereadings.py  0005_alter_devicereadings_options.py  0006_device_watering_mode.py  0007_device_time_interval.py
plantmonitoring_be/plantmonitoring_be/: asgi.py  mysql.cnf  settings.py  urls.py  wsgi.py
